--- a/package.json
+++ b/package.json
@@ -13,14 +13,23 @@
     "@apollo/client": "^3.6.6",
     "@faustwp/cli": "1.0.1",
     "@faustwp/core": "1.0.3",
+    "@headlessui/react": "^1.7.16",
+    "@heroicons/react": "^2.0.18",
     "@wordpress/base-styles": "^4.26.0",
     "@wordpress/block-library": "^7.19.0",
+    "autoprefixer": "^10.4.14",
     "classnames": "^2.3.1",
+    "formik": "^2.4.3",
     "graphql": "^16.6.0",
+    "netlify-cli": "^15.11.0",
     "next": "^12.1.6",
+    "next-recaptcha-v3": "^1.2.0",
+    "postcss": "^8.4.27",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sass": "^1.54.9"
+    "sass": "^1.54.9",
+    "tailwindcss": "^3.3.3",
+    "yup": "^1.2.0"
   },
   "engines": {
     "node": ">=16",
