--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@faustwp/core": "1.0.3",
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
+    "@tailwindcss/typography": "^0.5.9",
     "@wordpress/base-styles": "^4.26.0",
     "@wordpress/block-library": "^7.19.0",
     "autoprefixer": "^10.4.14",
@@ -24,6 +25,7 @@
     "netlify-cli": "^15.11.0",
     "next": "^12.1.6",
     "next-recaptcha-v3": "^1.2.0",
+    "next-themes": "^0.2.1",
     "postcss": "^8.4.27",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
